--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cn.etetet.demores",
   "displayName": "ET.DemoRes",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "unity": "2022.3",
-  "description": "et demores",
+  "description": "et自带demo的一些资源",
   "author": {
     "name": "tanghai",
     "url": "https://github.com/egametang/ET"
